@@ -111,7 +111,7 @@ public class LoreService {
 
     public static class LoreEntry {
         public String target;
-        public String loreText;
+        public final String loreText;
         public String footerText = "";
         public RECEIVER receiver = RECEIVER.CURRENT;
         public TRIGGER trigger = TRIGGER.CONTROLLED;
@@ -336,7 +336,7 @@ public class LoreService {
 
     @SelectionHandler("loreAdd1")
     public static void handleReceiverSelectionChange(StringSelectInteractionEvent event, String menuId) {
-        RECEIVER selected = RECEIVER.valueOf(event.getValues().get(0));
+        RECEIVER selected = RECEIVER.valueOf(event.getValues().getFirst());
         StringSelectMenu.Builder selectMenu =
                 StringSelectMenu.create("loreAdd2_" + selected).setPlaceholder("When...");
         for (TRIGGER value : TRIGGER.values()) {
@@ -349,7 +349,7 @@ public class LoreService {
     @SelectionHandler("loreAdd2")
     public static void handleTriggerSelectionChange(StringSelectInteractionEvent event, String menuId) {
         String selected =
-                menuId.replace("loreAdd2_", "") + "_" + event.getValues().get(0);
+                menuId.replace("loreAdd2_", "") + "_" + event.getValues().getFirst();
         StringSelectMenu.Builder selectMenu =
                 StringSelectMenu.create("loreAdd3_" + selected).setPlaceholder("Ping GM...");
         for (PING value : PING.values()) {
@@ -362,7 +362,7 @@ public class LoreService {
     @SelectionHandler("loreAdd3")
     public static void handlePingSelectionChange(StringSelectInteractionEvent event, String menuId) {
         String selected =
-                menuId.replace("loreAdd3_", "") + "_" + event.getValues().get(0);
+                menuId.replace("loreAdd3_", "") + "_" + event.getValues().getFirst();
         StringSelectMenu.Builder selectMenu =
                 StringSelectMenu.create("loreAdd4_" + selected).setPlaceholder("Trigger...");
         for (PERSISTANCE value : PERSISTANCE.values()) {
@@ -375,7 +375,7 @@ public class LoreService {
     @SelectionHandler("loreAdd4")
     public static void handlePersistanceSelectionChange(StringSelectInteractionEvent event, String menuId) {
         String selected =
-                menuId.replace("loreAdd4_", "") + "_" + event.getValues().get(0);
+                menuId.replace("loreAdd4_", "") + "_" + event.getValues().getFirst();
         confirmAddLoreSettings(event.getChannel(), selected);
         event.getMessage().delete().queue(Consumers.nop(), BotLogger::catchRestError);
     }
@@ -448,10 +448,10 @@ public class LoreService {
 
         // Validate
         List<String> validTargets = new ArrayList<>();
-        for (int i = 0; i < targets.length; i++) {
-            String validatedTarget = validateLore(targets[i], newEntry, loreMap, game);
+        for (String s : targets) {
+            String validatedTarget = validateLore(s, newEntry, loreMap, game);
             if (validatedTarget == null) {
-                MessageHelper.sendMessageToChannel(event.getChannel(), targets[i] + " is invalid to save lore");
+                MessageHelper.sendMessageToChannel(event.getChannel(), s + " is invalid to save lore");
                 continue;
             }
             validTargets.add(validatedTarget);
